<resources>

  <string name="app_name">Hermes</string>

  <string name="accuracy">Accuracy</string>

  <string name="nearestPath">On %1$s</string>
  <string name="unnamed">Unnamed</string>
  <string name="offRoad">Off-road</string>

  <string name="settings">Settings</string>
  <string name="exit">Exit</string>

  <string name="general">General</string>
  <string name="measurementSystem">Measurement system</string>
  <string name="imperial">Imperial</string>
  <string name="metric">Metric</string>
  <string name="directionAnnouncementPrecision">Direction announcement precision</string>
  <string name="off">Off</string>
  <string name="low">Low</string>
  <string name="high">High</string>
  <string name="announceAccuracyChanges">Announce accuracy changes</string>
  <string name="compassMode">Compass mode</string>
  <string name="activateWhenMoving">Activate when moving</string>
  <string name="hideUnnamedPoints">Hide unnamed points</string>

</resources>
