<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">

  <ListPreference
    android:key="measurementSystem"
    android:title="@string/measurementSystem"
    android:entries="@array/measurementSystemNames"
    android:entryValues="@array/measurementSystemValues"
    android:defaultValue="metric"
    />

  <ListPreference
    android:key="directionAnnouncementPrecision"
    android:title="@string/directionAnnouncementPrecision"
    android:entries="@array/directionPrecisionNames"
    android:entryValues="@array/directionPrecisionValues"
    android:defaultValue="off"
    />


  <CheckBoxPreference
    android:key="announceAccuracyChanges"
    android:title="@string/announceAccuracyChanges"
    android:defaultValue="false"
    />

  <CheckBoxPreference
    android:key="compassMode"
    android:title="@string/compassMode"
    android:defaultValue="true"
    />

  <CheckBoxPreference
    android:key="activateWhenMoving"
    android:title="@string/activateWhenMoving"
    android:defaultValue="true"
    />>

  <CheckBoxPreference
    android:key="hideUnnamedPoints"
    android:title="@string/hideUnnamedPoints"
    android:defaultValue="false"
    />

</PreferenceScreen>
